[build-system]
requires = ["setuptools>=61.0", "web3", "py-solc-x]
build-backend = "setuptools.build_meta"

[project]
name = "ethairballoons"
version = "0.0.1"
authors = [
  { name="Petros Demetrakopoulos", email="petrosdem@gmail.com" },
]
description = "A strictly typed ORM library for Ethereum blockchain. "
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/petrosDemetrakopoulos/ethairballoons.py"
"Bug Tracker" = "https://github.com/petrosDemetrakopoulos/ethairballoons.py/issues"